# dialogic_sip

./: .gitignore  README.md  TODO.txt
callflow/: CMakeLists.txt  README  callflow.c  callflow.cpp  callflow.h  callflow.hpp  makefile  params.ini  solution_gen.cmd
callserver/: CMakeLists.txt  Makefile  README  callserver.cfg.dist  callserver.cpp  callserver.hpp  channel_manager.hpp  logging.cpp  logging.h  makefile  params.ini  sessions.cpp  sessions.hpp  solution_gen.cmd  ssp_scp_interface.cpp  ssp_scp_interface.hpp  transport.hpp  transport_zmq.cpp  transport_zmq.hpp  udp_request.cpp  udp_request.hpp
callserver/tests/: scp.py  scp2.py  scp_interface.py
scp/: config.py  dbconfig.py  logger.py  message_queue.py  net_server.py  plugin.py  scp.py  scp_interface.py  sdp.py  sdp_test.py  stat_counters.py  test_send_request.py  udp_server.py
services/: config.py  dbconfig.py  logger.py  net_server.py  plugin.py  plugin_manager.py  scp.py  scp_interface.py  sdp.py  sdp_test.py  udp_server.py
services/missed_call/: missed_call.py
